# Ducktator

./: .replit  app.py  pyproject.toml  requirements.txt
